// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTodo() with bad fields 1`] = `
EffectsLog [
  trackEvent(
    "todo.update",
    "id",
  ),
  showLoadingSpinner(
  ),
  selectFormFields(
    "state",
  ),
  areFieldsValid(
    "fields",
  ),
  trackEvent(
    "todo.update.failure",
    "id",
  ),
  showErrorMessage(
    "BAD_FORM",
  ),
  hideLoadingSpinner(
  ),
]
`;

exports[`createTodo() with good fields 1`] = `
EffectsLog [
  trackEvent(
    "todo.update",
    "id",
  ),
  showLoadingSpinner(
  ),
  selectFormFields(
    "state",
  ),
  areFieldsValid(
    "fields",
  ),
  post(
    "/todo/id",
    "fields",
  ),
  trackEvent(
    "todo.update.success",
    "id",
  ),
  hideLoadingSpinner(
  ),
]
`;
